app/assets/css/styles.css
/* Base */
body {
  font-family: "Open sans", Helvetica, sans-serif;
  text-rendering: optimizeLegibility;
}
html, body {
  height: 100%;
}
.wrapper {
  width: auto;
  margin-right: auto;
  margin-left: auto;
  position: relative;
  min-height: 100%;
}
.main {
/*  overflow:auto;*/
  padding-bottom: 84px;
  min-height: 100%;
}
.sticky-banner {
  position: relative;
  margin-top: -84px;
  height: 84px;
  clear:both;
}

a {
  color: #2ecc71;
  text-decoration: none;
  -webkit-transition: 0.25s;
  -moz-transition: 0.25s;
  -o-transition: 0.25s;
  transition: 0.25s;
}
a:hover {
  color: #25a25a;
  text-decoration: none;
}
h1, h2, h3 {
  color: rgb(30, 42, 90);
  font-family: 'Merriweather', serif;
  font-weight: 700;
  text-shadow: 1px 1px #fff, 0 0 0 #000, 1px 1px #fff;
  text-rendering: optimizeLegibility;
}
h1 {
  font-size: 64px;
}
h2 {
  font-size: 52px;
}
h3 {
  font-size: 24px;
}
p, ul li {
  color: rgb(52, 73, 94);
  font-size: 16px;
  line-height: 1.6;
}
ul, li {
  line-height: 1.72em;
}

/* Titles */
.big-logo {
  background-image: url('../img/logo.png');
  background-repeat: no-repeat;
  background-position: left center;
  padding-top: 15px;
}
.big-banner_title {
  font-size: 100px;
  font-weight: 600;
  line-height: 1;
  margin: 15px 0 10px;
  text-align: center;
  text-shadow: 1px 1px #fff, 0 0 0 #000, 1px 1px #fff;
}
.big-banner_subtitle {
  color: rgb(94, 109, 129);
  font-family: 'Open Sans', sans-serif;
  font-size: 21px;
  font-weight: 400;
  text-transform: uppercase;
  text-align: center;
  text-shadow: 1px 1px #fff, 0 0 0 #000, 1px 1px #fff;
}
.small-logo, .small-banner_title {
  margin-left: 26px;
}
.small-logo {
  background-image: url('../img/small-logo.png');
  background-repeat: no-repeat;
  background-position: left center;
}
.small-banner_title {
  font-size: 26px;
  font-weight: 500;
}
.normal_title {
  font-weight: 400;
  margin: 20px 0 10px;
  line-height: 1.2em;
}

/* Navigation */
.bottom-links {
  list-style: none;
}
.bottom-links li {
  display: inline-block;
  vertical-align: top;
  padding: 10px 18px 0 18px;
  font-size: 14px;
}
.bottom-links a {
  color: white;
}
.bottom-links a:hover, .bottom-links a:hover i {
  color: rgb(30, 42, 90);
}
.bottom-links small, .bottom-links small a, .bottom-links i {
  color: #2ecc71;
}

/* Accordion menu */
.accordion {
  width: 95%;
}
.accordion-group {
  background: #FFFFFF;
  border-bottom: 2px solid #3E3E3E;
}
.accordion-heading {
  background-color: #3E3E3E;
  padding: 8px 10px 6px;
  line-height: 20px;
  font-weight: 300;
}
.accordion-heading a {
  color: #FFFFFF;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
}
.accordion-heading a:hover {
  text-shadow: 0 0 1px rgba(255, 255, 255, 0.7);
}
.accordion-body ul {
  margin: 0;
}
.accordion-body ul li {
  padding: 8px 25px 6px;
  border-bottom: 1px solid #DDD;
  transition: all 0.15s;
}
.accordion-body ul li:hover {
  background-color: #f4F4F4;
}
.accordion-body ul li:nth-last-child(2), .accordion-body ul li:nth-last-child(1) {
  border: none;
}
.accordion-body ul li:hover:nth-last-child(1) {
  background-color: #FFFFFF;
}
.reset-filters {
  font-size: 13px;
  line-height: 20px;
}

/* Home */
.home_banner {
  padding-top: 112px;
  margin-bottom: 20px;
  width: 100%;
}
.home_intro {
  margin-bottom: 20px;
  overflow: hidden;
}
.home_partners {
  background-color: rgb(236, 240, 241);
}
.home_partners-logos {
  margin-top: 20px;
  padding: 10px;
}
.home_partners-logos ul li {
  text-align: center;
}

/* Footer */
.bottom_banner {
  background-color: #2ecc71;
}
.bottom_inner-banner {
  background-color: #25a25a;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
}

.search_banner {
  margin-bottom: 20px;
  background: -webkit-linear-gradient(rgba(255,255,255,0.95) 0px,rgba(255,255,255,0.85) 95px);
  background: linear-gradient(rgba(255,255,255,0.95) 0px,rgba(255,255,255,0.85) 95px);
  -webkit-box-shadow: 0 1px 4px rgba(0,0,0,0.2);
  -moz-box-shadow: 0 1px 4px rgba(0,0,0,0.2);
  box-shadow: 0 1px 4px rgba(0,0,0,0.2);
  border-bottom: 1px solid #fff;
}

/* Results */
.results-title {
  position: relative;
  padding-bottom: 10px;
}
.results-loading {
  position: absolute;
  height: 25px;
  padding-left: 10px;
  top: -2px;
}
.results-list, .facets ul li {
  font-size: 85%;
  list-style: none;
}
.results-list, .more_results.row {
  margin-bottom: 20px;
}
.result {
  padding: 10px 0;
  line-height: 1.313em;
  border-bottom: 1px #e5e5e5 solid;
}
.result__title, .result__author {
  margin: 0;
  padding-bottom: 2px;
  font-size: 1.125em;
  line-height: 1.375em;
  text-shadow: none;r
}
.result__author {
  padding-bottom: 8px;
}
.field_label, .result__publisher, .result__date, .result__source, .result__collection {
  padding-bottom: 4px;
  font-size: 13px;
}

/* Document type Icons */
.result__material-icon, .notice__material-icon {
  max-width: 75%;
  opacity: 0.3;
}

/* Notice */
.page-title_banner {
  margin-top: -19px;
  margin-bottom: 20px;
  background-color: rgb(236, 240, 241);
}
.page-title_banner h3 {
  color: #b8bfc7;
}
.back {
  margin-left: 26px;
}
.notice_content {
  margin-bottom: 40px;
  line-height: 1.722169;
}
.notice__title {
  margin: 0;
}
hr, .notice__material-icon, .notice__title, .notice__author, .notice_details {
  margin-left: 26px;
}
.notice_details {
  font-size: 75%;
}
.notice_details span {
  padding-bottom: 4px;
}
.notice_details hr {
  margin-left: 0;
}

/* Form elements */
.field_label {
  color: #5e6d81;
}

input[type="search"] {
  background-color: rgb(236, 240, 241);
  font-family: inherit;
  border: none;
  color: #34495e;
  display: block;
  font-size: 0.875em;
  margin: 0 0 1em 0;
  padding: 0.5em;
  height: 44px;
  width: 100%;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  -webkit-transition: -webkit-box-shadow 0.45s, border-color 0.45s ease-in-out;
  -moz-transition: -moz-box-shadow 0.45s, border-color 0.45s ease-in-out;
  transition: box-shadow 0.45s, border-color 0.45s ease-in-out;
}
input.small-search-query {
  height: 30px;
  margin-top: 16px;
}

.button_wrapper {
  padding-left: 0;
}
button, .button {
  border: 1px solid #25a25a;
  cursor: pointer;
  font-family: inherit;
  font-weight: bold;
  background-color: #2ecc71;
  color: white;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
  position: relative;
  text-decoration: none;
  text-align: center;
  display: inline-block;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  width: 85%;
}
button:hover, button:focus, .button:hover, .button:focus {
  background-color: #25a25a;
}
button.small, .button.small {
  width: 44%;
  margin-top: 16px;
}
.button.back {
  display: inline-block;
  padding-top: 0.5625em;
  padding-right: 1.125em;
  padding-bottom: 0.625em;
  padding-left: 1.125em;
  font-size: 0.8125em;
  margin-top: 16px;
  background-color: rgb(52, 73, 94);
  border-color: rgb(30, 42, 90);
}
.button.back:hover {
  background-color: rgb(30, 42, 90);
}
.back i {
  font-size: 16px;
  padding-right: 6px;
}

